# compilerstore

./: Dockerfile  README.md
compiler/: 1.tar.xz  Cargo.toml  build.rs  test_simple_logic.c
compiler/.cargo/: config.toml
compiler/examples/: function_call_test.c  hello.c  lalrpop_test.rs  parser_demo.rs  test.c
compiler/scripts/: ast_compare.sh  codegen_compare.sh  env.sh  ir_compare.sh  lex_compare.sh  run_all.sh
compiler/src/: main.rs
compiler/src/arm/: codegen.rs  mod.rs
compiler/src/assm/: allocator.rs  arm.rs  codegen.rs  mod.rs
compiler/src/bisheng/: ast.rs  ir.rs  mod.rs  token.rs
compiler/src/error/: error.rs
compiler/src/ir/: basic_block.rs  builder.rs  function.rs  generator.rs  instruction.rs  mod.rs
compiler/src/lexer/: keywords.rs  lexer.rs  mod.rs  token.rs
compiler/src/parser/: ast.rs  ast_new.rs  grammar.lalrpop  mod.rs  parser.rs  precedence.rs
compiler/src/riscv/: assembly.rs  codegen.rs  mod.rs  register.rs
compiler/src/semantic/: analyzer.rs  mod.rs  symbol_table.rs  types.rs
compiler/src/utils/: helpers.rs
compiler/tests/: smoke.rs
compiler/tests/arm/: simple_test.sh  test_simple.c
compiler/tests/assm/: bisheng_compare.sh  test_one.sh
compiler/tests/final/: a+.c  a-.c  a.c  assm.sh  ast.sh  ir.sh  lexer.sh
compiler/tests/ir/: run_all.sh  simple_test.sh  test_control_flow.c  test_expressions.c  test_functions.c  test_logic.c  test_simple_if.c
compiler/tests/lexer/: simple_test.sh  test_simple.c
compiler/tools/: asm_normalize.sh  ast_normalize.py  clang_tokens_to_json.py  ir_canonicalize.sh
(+139 files in other folders)
