[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.21", features = ["lexer"] }

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
lalrpop-util = { version = "0.21", features = ["lexer"] }
inkwell = { version = "0.6", default-features = false, features = ["llvm17-0"] }

[[example]]
name = "lalrpop_test"
path = "examples/lalrpop_test.rs" 
[dev-dependencies]
compiler = { path = "." }
